# IsaHipster

./: .gitignore  CoIndTacs.ML  CoinductionData.ML  ExplLemmaTac.ML  HipSpec.ML  HipSpecifyer.hs  HipTacOps.ML  HipsterExplore.ML  HipsterExplore2.ML  HipsterIsar.ML  HipsterTacs.ML  HipsterUtils.ML  IndTacs.ML  InductionData.ML  IsaHipster.thy  Isabelle.hs  LemmaData.ML  MiscData.ML  ObsIntTrans.thy  ProofData.ML  ProofTools.ML  README.md  RecIndLemmaSpecTacs.ML  RecIndTacs.ML  SchemeInstances.ML  SledgehammerTacs.ML  Snips.hs  TODO.md  TacticData.ML  TermInducts.ML  ThyExplData.ML  ThyExplTacs.ML  issues.md  tegu.html
AVoCS2015/: background.tex  bibfile.bib  conclusion.tex  conditionals.tex  eceasst.cls  eval.tex  frontmatter.tex  hipsterAVoCS15.tex  introduction.tex  rec-ind.tex  related.tex
CICM-paper/: Background.tex  Conclusion.tex  Hipster.tex  Introduction.tex  PartialFunctions.tex  RelatedWork.tex  bibfile.bib  cicm-paper.aux  cicm-paper.bbl  cicm-paper.blg  cicm-paper.out  cicm-paper.tex  hipster.odg
CTacs/: CTac.ML  CoinductCTac.ML  InductCTac.ML
Examples/: BExp.thy  Cake.thy  CoBinaryTree.thy  CriticsTest.thy  Demo.thy  DemoFacit.thy  Dev.thy  Exp.thy  GenericArbitrary.hs  Lappend.thy  ListDemo.thy  ListDemoLemmaExpl.thy  NatsBug.thy  OBTDemo.thy  Qrev.thy  ReplaceRevDel.thy  RoseTree.thy  SimpleCake.thy  SmallListDemo.thy  Snoc.thy  Sorted.thy  StreamExample.thy  StreamFriends.thy  TestML.thy  TestRecIndTac.thy  TestThingolSorted.thy  Tree.thy  (+5 more)
hipspecifyer/: HipSpecifyer.hs  LICENSE  hipspecifyer.cabal
hipspecifyer/HipSpecifyer/: Prelude.hs
(+700 files in other folders)
