name: hipspecifyer
version: 1
build-type: Simple
cabal-version: >= 1.2

library
    exposed-modules: HipSpecifyer, HipSpecifyer.Prelude
    build-depends: base >= 4 && < 5, hipspec >= 3.1, quickspec >= 0.9.4, QuickCheck >= 2.7
    if impl(ghc < 7.6)
      build-depends: ghc-prim
executable HipSpecifyer
    main-is: HipSpecifyer.hs
    ghc-options: -main-is HipSpecifyer
    build-depends: base >= 4 && < 5, containers, haskell-src-exts < 1.16.0
